# harmonyrestorer-v1

./: .dockerignore  .gitignore  .gitmodules  .vercelignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  bef274c1-7a57-4406-8ee0-c41e867ec16a  docker-compose.dev.yml  docker-compose.yml  environment.yml  pyproject.toml  requirements-dev.txt  ruff.toml
.github/workflows/: ci.yml
backend/: .env.example  requirements.txt  test_device.py  test_ml_models.py  test_uvr_integration.py
backend/app/: config.py  exceptions.py  main.py  middleware.py  schemas.py
backend/app/_archive/: op_gan.py  opgan_restorer.py  self_onn.py  system_test.py  test_ml_models.py  test_opgan_restorer.py
backend/app/ml_models/: __init__.py  op_gan.py  self_onn.py
backend/app/models/: chunking.py  op_gan.py  self_onn.py
backend/app/routes/: __init__.py  denoise.py  health.py
backend/app/services/: __init__.py  admission.py  artifacts.py  denoiser.py  jobs.py  opgan_denoiser.py  opgan_restorer.py  restoration.py  separation.py  transcode.py
backend/tests/: conftest.py  test_admission.py  test_artifacts.py  test_config.py  test_denoise.py  test_denoiser.py  test_health.py  test_jobs.py  test_op_gan.py  test_opgan_denoiser.py  test_security.py  test_self_onn.py  test_transcode.py
dataset/: __init__.py  acquire.py  evaluate.py  generate_pairs.py  infer.py  infer_uvr.py  noise.py  preprocess.py  torch_dataset.py  train.py
dataset/tests/: test_acquire.py  test_evaluate.py  test_generate_pairs.py  test_infer.py  test_infer_uvr.py  test_noise.py  test_preprocess.py  test_training.py
docs/: benchmarks.md  references.md  todo.md
docs/adr/: 001-enterprise-refactor.md  002-dataset-pipeline.md  002-security-audit-phase1-fixes.md  003-frontend-redesign.md  003-phase3-hardening.md  004-opgan-inference-and-evaluation.md  004-phase3-hardening.md  template.md
frontend/: .env.example  .eslintrc.json  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/__tests__/: App.test.tsx
frontend/src/api/: client.ts
frontend/src/api/__tests__/: client.test.ts
frontend/src/components/: AudioPlayer.tsx  ComparisonView.tsx  ErrorBoundary.tsx  ProgressCard.tsx  SettingsPanel.tsx  TapeStrip.tsx  TechnoBackground.tsx  UploadArea.tsx  Waveform.tsx  WaveformCanvas.tsx
frontend/src/components/__tests__/: AudioPlayer.test.tsx  ComparisonView.test.tsx  ErrorBoundary.test.tsx  ProgressCard.test.tsx  TapeStrip.test.tsx  TechnoBackground.test.tsx  UploadArea.test.tsx  Waveform.test.tsx  WaveformCanvas.test.tsx
frontend/src/hooks/: useAudioDecoder.ts  useAudioPlayback.ts  useCrossfadePlayback.ts
frontend/src/hooks/__tests__/: useAudioDecoder.test.ts  useAudioPlayback.test.ts  useCrossfadePlayback.test.ts
frontend/src/styles/: globals.css
scripts/: deploy_backend.sh
