[project]
name = "harmonyrestorer"
version = "1.0.0"
description = "AI-powered audio restoration and enhancement"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jacob J. Choi"}
]
requires-python = ">=3.11"

dependencies = [
    # FastAPI Stack
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "python-multipart>=0.0.22",
    "websockets>=16.0",
    
    # Audio Processing
    "numpy>=2.0.0",
    "scipy>=1.17.0",
    "soundfile>=0.13.0",
    "librosa>=0.11.0",
    "audioread>=3.0.0",
    "resampy>=0.4.0",
    "pydub>=0.25.0",
    "pyrubberband>=0.4.0",
    "samplerate>=0.2.0",
    
    # ML Core
    "einops>=0.8.0",
    "julius>=0.2.7",
    "pytorch-lightning>=2.6.0",
    "omegaconf>=2.3.0",
    "ml-collections>=0.1.1",
    "natsort>=8.4.0",
    "PyYAML>=6.0",
    
    # Inference
    "onnx>=1.20.0",
    "onnxruntime>=1.24.0",
    "onnx2pytorch>=0.5.0",
    
    # Image Processing
    "opencv-python>=4.6.0",
    "pillow>=12.0.0",
    
    # Config & Utilities
    "pydantic>=2.12.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "httpx>=0.28.0",
    "requests>=2.31.0",
    "wget>=3.2",
    
    # Matchering (audio matching)
    "matchering>=2.0.6",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "faker>=19.6.0",
    
    # Linting & Formatting
    "black>=26.0.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "isort>=7.0.0",
    "flake8>=7.3.0",
    "bandit>=1.7.0",
    "pylint>=2.17.0",
    
    # Git Hooks
    "pre-commit>=3.4.0",
    "gitpython>=3.1.0",
    "detect-secrets>=1.4.0",
    
    # Notebooks
    "jupyter>=1.0.0",
    "ipython>=9.10.0",
    "notebook>=7.5.0",
    
    # Profiling
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.0",
    
    # Visualization
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
]

docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
]

ml-tracking = [
    "tensorboard>=2.20.0",
    "wandb>=0.15.0",
    "mlflow>=2.6.0",
]

# All dev dependencies combined
all = [
    "harmonyrestorer[dev,docs,ml-tracking]",
]

[project.urls]
Repository = "https://github.com/yourusername/HarmonyRestorer-v1"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

# ============================================================================
# Tool Configurations
# ============================================================================

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | external_tools
    | \.pytest_cache
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "external_tools",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.isort]
profile = "black"
line_length = 100
skip = ["external_tools", ".venv"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["external_tools", "tests"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "backend"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "external_tools/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]