[project]
name = "harmonyrestorer"
version = "1.0.0"
description = "AI-powered audio restoration and enhancement"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jacob J. Choi"}
]
requires-python = ">=3.11"

dependencies = [
    # FastAPI Stack
    "fastapi~=0.128.0",
    "uvicorn[standard]~=0.40.0",
    "python-multipart~=0.0.22",

    # Audio Processing (audio-separator pulls in its own audio deps)
    "audio-separator[cpu]~=0.41.0",

    # Config & Utilities
    "pydantic~=2.12.0",
    "python-dotenv~=1.0.0",
    "psutil~=5.9.0",
]

[project.optional-dependencies]
dataset = [
    # Dataset pipeline for OpGAN training
    "internetarchive~=4.0.0",
    "numpy>=1.24.0",
    "soundfile~=0.12.0",
    "scipy>=1.10.0",
    "torch~=2.0.0",
]
eval = [
    # Benchmarking metrics for audio restoration quality
    "mir_eval~=0.7.0",
    "pesq~=0.0.4",
    "pystoi~=0.4.0",
]
dev = [
    # Testing
    "httpx~=0.27.0",
    "pytest~=9.0.0",
    "pytest-asyncio~=1.3.0",
    "pytest-cov~=7.0.0",
    "pytest-mock~=3.15.0",

    # Linting & Formatting
    "black~=26.1.0",
    "ruff~=0.15.0",
    "mypy~=1.19.0",
    "isort~=7.0.0",

    # Security Scanning
    "bandit~=1.7.0",
    "pip-audit>=2.7.0",
    "detect-secrets~=1.4.0",
]

all = [
    "harmonyrestorer[dev]",
    "harmonyrestorer[dataset]",
    "harmonyrestorer[eval]",
]

[project.urls]
Repository = "https://github.com/jacob7choi-xyz/harmonyrestorer-v1"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "dataset*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

# ============================================================================
# Tool Configurations
# ============================================================================

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | external_tools
    | _archive
    | \.pytest_cache
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "external_tools",
    "_archive",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.isort]
profile = "black"
line_length = 100
skip = ["external_tools", "_archive", ".venv"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "backend"
exclude = ["external_tools", "_archive", "tests"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
norecursedirs = ["_archive", "external_tools", "node_modules", ".git"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "external_tools/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]